# elcmd

./: .gitignore  .tasks.txt.kate-swp  CMakeLists.txt  README.md  gitkey  gitkey.pub  tasks.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: ArchiveService.cpp  ArchiveService.h  ArchiveViewerDialog.cpp  ArchiveViewerDialog.h  ConflictDialog.cpp  ConflictDialog.h  FileModel.cpp  FileModel.h  FileService.cpp  FileService.h  Logger.cpp  Logger.h  PaneWidget.cpp  PaneWidget.h  main.cpp  run_copy.cpp
tests/: TestFileModel.cpp  TestFileService.cpp  TestFileServiceDirCopy.cpp  TestFileServiceFailures.cpp  TestPaneOps.cpp  TestRightClick.cpp
